docs: refresh setup workflow and role features

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-BOT_PREFIX=!
-TOKEN=your_token_here
-DB_PATH=data/bot.db
-OPENWEATHER_KEY=your_api_key_here
+DISCORD_TOKEN=your_discord_token_here
+OPENWEATHER_KEY=your_openweather_key_here
+DB_PATH=bot.db
