debugging requirements.txt

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,5 @@
 -r requirements.txt
-types-discord-py
-pytest
-pytest-asyncio
-flake8
-black
-mypy
+pytest>=8.0.0
+flake8>=7.0.0
+black>=24.0.0
+mypy>=1.10.0
